ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/TR_Test_Execution__c.object-meta.xml
<CustomObject>
    <label>Test Execution</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Test Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Execution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>