ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Deadline__c.field-meta.xml
<CustomField>
    <fullName>TR_Deadline__c</fullName>
    <description>Deadline to complete the test execution</description>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>