ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Environment__c.field-meta.xml
<CustomField>
    <fullName>TR_Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>