ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Ext_Execute_Now__c.field-meta.xml
<CustomField>
    <fullName>TR_Ext_Execute_Now__c</fullName>
    <description>Execute Now (for Experience Cloud only)</description>
    <formula>$Label.TR_exp_cloud_base_url&amp;&quot;/protrack/s/test-execute-outcome?c__recordId=&quot;&amp;Id</formula>
    <label>Execute Now</label>
    <type>Text</type>
</CustomField>