ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Introduction__c.field-meta.xml
<CustomField>
    <fullName>TR_Introduction__c</fullName>
    <formula>TR_Template__r.TR_Introduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Introduction</label>
    <type>Text</type>
</CustomField>