ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Module__c.field-meta.xml
<CustomField>
    <fullName>TR_Module__c</fullName>
    <formula>TEXT(TR_Template__r.TR_Module__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module</label>
    <type>Text</type>
</CustomField>