ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_My_Test_Execution_as_Tester__c.field-meta.xml
<CustomField>
    <fullName>TR_My_Test_Execution_as_Tester__c</fullName>
    <description>To create Salesforce record list view (My Test Execution) where Tester = Logged In User.</description>
    <formula>IF( TR_Tester__r.Id  =  $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Test Execution as Tester</label>
    <type>Checkbox</type>
</CustomField>