ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Overall_Test_Comments__c.field-meta.xml
<CustomField>
    <fullName>TR_Overall_Test_Comments__c</fullName>
    <label>Overall Test Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>