ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Pass_Percentage__c.field-meta.xml
<CustomField>
    <fullName>TR_Pass_Percentage__c</fullName>
    <formula>IF( TR_Total_Steps__c = 0, 0, TR_Steps_Passed__c / TR_Total_Steps__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>