ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Project__c.field-meta.xml
<CustomField>
    <fullName>TR_Project__c</fullName>
    <label>Project</label>
    <referenceTo>TR_Project__c</referenceTo>
    <relationshipLabel>Test Execution</relationshipLabel>
    <relationshipName>Test_Execution</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>