ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Run_Test_Script__c.field-meta.xml
<CustomField>
    <fullName>TR_Run_Test_Script__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/cmp/c__TR_RunTestExecutionComponent?c__recordId=&quot;+Id, &quot;Click to Execute&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Test Script</label>
    <type>Text</type>
</CustomField>