ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Sprint__c.field-meta.xml
<CustomField>
    <fullName>TR_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>TR_Sprint__c</referenceTo>
    <relationshipLabel>Test Execution</relationshipLabel>
    <relationshipName>Test_Execution</relationshipName>
    <type>Lookup</type>
</CustomField>