ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Status__c.field-meta.xml
<CustomField>
    <fullName>TR_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Started</fullName>
                <color>#78C953</color>
                <label>Started</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <color>#0B6FCE</color>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Awaiting Retest</fullName>
                <color>#A845DC</color>
                <label>Awaiting Retest</label>
            </value>
            <value>
                <fullName>Parked</fullName>
                <color>#F3D904</color>
                <label>Parked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>