ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>TR_Steps_Completed__c</fullName>
    <label>Steps Completed</label>
    <summaryFilterItems>
        <field>TR_Test_Execution_Step__c.TR_Step_Outcome__c</field>
        <operation>equals</operation>
        <value>Pass, Passed with issues, Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>TR_Test_Execution_Step__c.TR_Test_Execution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>