ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Template__c.field-meta.xml
<CustomField>
    <fullName>TR_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>TR_Test_Script__c</referenceTo>
    <relationshipLabel>Test Execution</relationshipLabel>
    <relationshipName>Test_Execution</relationshipName>
    <type>Lookup</type>
</CustomField>