ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Test_Completion__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Completion__c</fullName>
    <formula>IF (TR_Steps_Completed__c  = 0, 0 ,TR_Steps_Completed__c /TR_Total_Steps__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>