ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Test_Outcome__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Outcome__c</fullName>
    <label>Test Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
                <color>#0B6FCE</color>
                <label>Passed</label>
            </value>
            <value>
                <fullName>Passed with minor issues</fullName>
                <color>#F3D904</color>
                <label>Passed with minor issues</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <color>#FF0000</color>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Not Executed</fullName>
                <color>#A845DC</color>
                <default>true</default>
                <label>Not Executed</label>
            </value>
            <value>
                <fullName>Blocked for Testing</fullName>
                <isActive>false</isActive>
                <label>Blocked for Testing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>