ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Test_Title__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Title__c</fullName>
    <formula>TR_Template__r.TR_Test_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Title</label>
    <type>Text</type>
</CustomField>