ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Tester__c.field-meta.xml
<CustomField>
    <fullName>TR_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Execution</relationshipName>
    <type>Lookup</type>
</CustomField>