ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Tester_Relationship__c.field-meta.xml
<CustomField>
    <fullName>TR_Tester_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tester Relationship</label>
    <referenceTo>TR_Tester__c</referenceTo>
    <relationshipLabel>Test Execution</relationshipLabel>
    <relationshipName>Test_Execution</relationshipName>
    <type>Lookup</type>
</CustomField>