ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/fields/TR_Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>TR_Total_Steps__c</fullName>
    <label>Total Steps</label>
    <summaryForeignKey>TR_Test_Execution_Step__c.TR_Test_Execution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>