ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TR_Test_Title__c</columns>
    <columns>TR_Test_Outcome__c</columns>
    <columns>TR_Tester__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>