ProTrackDev/force-app/main/default/objects/TR_Test_Execution__c/listViews/My_Test_Executions.listView-meta.xml
<ListView>
    <fullName>My_Test_Executions</fullName>
    <columns>NAME</columns>
    <columns>TR_Test_Title__c</columns>
    <columns>TR_Test_Outcome__c</columns>
    <columns>TR_Tester__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TR_My_Test_Execution_as_Tester__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Test Executions</label>
</ListView>